# film-recommend

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
latex/: .gitignore  main.tex  solutionclass.cls
src/: texts.py
src/data/: kaggle.py
src/models/: recommender.py
src/translations/: translations.json
src/ui/: components.py  translator.py
src/ui/pages/: add_movie.py  by_keywords.py  by_movie.py  profile.py
